# transcriptiq

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: build-desktop.yml
.streamlit/: config.toml
examples/: batch_folder.py
installers/: README.md
installers/pyinstaller/: entry.py  installer.iss  transcriptiq.spec
installers/slim/: install-macos.sh  install-windows.ps1
src/transcriptiq/: __init__.py  cli.py  gui.py  result.py  transcriber.py
tests/: test_transcriber.py
